fixed spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -622,6 +622,7 @@ TODO: all above to be sorted:
     .work-main-grid__item:last-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
+        padding-bottom: 1em;
     }
 
 	.page-header {
